# connectedhomeip

./: .gitignore  .gitmodules  BUILD.gn  NOTES.md
.github/workflows/: tests.yaml
build_overrides/: googletest.gni
config/standalone/: CHIPProjectConfig.h
examples/air-purifier-app/air-purifier-common/: air-purifier-app.matter  air-purifier-app.zap
examples/air-quality-sensor-app/air-quality-sensor-common/: air-quality-sensor-app.matter  air-quality-sensor-app.zap
examples/all-clusters-app/all-clusters-common/: all-clusters-app.matter  all-clusters-app.zap
examples/all-clusters-minimal-app/all-clusters-common/: all-clusters-minimal-app.matter  all-clusters-minimal-app.zap
examples/bridge-app/bridge-common/: bridge-app.matter  bridge-app.zap
examples/build_overrides/: googletest.gni
examples/chef/devices/: noip_rootnode_dimmablelight_bCwGYSDpoe.matter  noip_rootnode_dimmablelight_bCwGYSDpoe.zap  rootnode_airpurifier_73a6fe2651.matter  rootnode_airpurifier_73a6fe2651.zap  rootnode_airpurifier_airqualitysensor_temperaturesensor_humiditysensor_thermostat_56de3d5f45.matter  rootnode_airpurifier_airqualitysensor_temperaturesensor_humiditysensor_thermostat_56de3d5f45.zap  rootnode_airqualitysensor_e63187f6c9.matter  rootnode_airqualitysensor_e63187f6c9.zap  rootnode_basicvideoplayer_0ff86e943b.matter  rootnode_basicvideoplayer_0ff86e943b.zap  rootnode_colortemperaturelight_hbUnzYVeyn.matter  rootnode_colortemperaturelight_hbUnzYVeyn.zap  rootnode_contactsensor_27f76aeaf5.matter  rootnode_contactsensor_27f76aeaf5.zap  rootnode_contactsensor_lFAGG1bfRO.matter  rootnode_contactsensor_lFAGG1bfRO.zap  rootnode_dimmablelight_bCwGYSDpoe.matter  rootnode_dimmablelight_bCwGYSDpoe.zap  rootnode_dishwasher_cc105034fe.matter  rootnode_dishwasher_cc105034fe.zap  rootnode_doorlock_aNKYAreMXE.matter  rootnode_doorlock_aNKYAreMXE.zap  rootnode_extendedcolorlight_8lcaaYJVAa.matter  rootnode_extendedcolorlight_8lcaaYJVAa.zap  rootnode_fan_7N2TobIlOX.matter  rootnode_fan_7N2TobIlOX.zap  rootnode_flowsensor_1zVxHedlaV.matter  rootnode_flowsensor_1zVxHedlaV.zap  rootnode_genericswitch_9866e35d0b.matter  rootnode_genericswitch_9866e35d0b.zap  rootnode_heatingcoolingunit_ncdGai1E5a.matter  rootnode_heatingcoolingunit_ncdGai1E5a.zap  rootnode_humiditysensor_Xyj4gda6Hb.matter  rootnode_humiditysensor_Xyj4gda6Hb.zap  rootnode_laundrywasher_fb10d238c8.matter  rootnode_laundrywasher_fb10d238c8.zap  rootnode_lightsensor_lZQycTFcJK.matter  rootnode_lightsensor_lZQycTFcJK.zap  rootnode_occupancysensor_iHyVgifZuo.matter  rootnode_occupancysensor_iHyVgifZuo.zap  (+31 more)
examples/chip-tool/: BUILD.gn
examples/contact-sensor-app/contact-sensor-common/: contact-sensor-app.matter  contact-sensor-app.zap
examples/dishwasher-app/dishwasher-common/: dishwasher-app.matter  dishwasher-app.zap
examples/energy-management-app/energy-management-common/: energy-management-app.matter  energy-management-app.zap
examples/light-switch-app/light-switch-common/: light-switch-app.matter  light-switch-app.zap
examples/lighting-app/lighting-common/: lighting-app.matter  lighting-app.zap
examples/lit-icd-app/lit-icd-common/: lit-icd-server-app.matter  lit-icd-server-app.zap
examples/lock-app/lock-common/: lock-app.matter  lock-app.zap
examples/log-source-app/log-source-common/: log-source-app.matter  log-source-app.zap
examples/microwave-oven-app/microwave-oven-common/: microwave-oven-app.matter  microwave-oven-app.zap
examples/minimal-commissioner-lib/: README.md
examples/minimal-commissioner-lib/android/: BUILD.gn
examples/minimal-commissioner-lib/data_model/: BUILD.gn  commissioner-clusters.matter  commissioner-clusters.zap
examples/minimal-commissioner-lib/data_model/src/controller/java/zap-generated/: CHIPAttributeTLVValueDecoder.cpp  CHIPCallbackTypes.h  CHIPClustersWrite-JNI.cpp  CHIPEventTLVValueDecoder.cpp  CHIPInvokeCallbacks.cpp  CHIPInvokeCallbacks.h  CHIPReadCallbacks.cpp  CHIPReadCallbacks.h
examples/minimal-commissioner-lib/data_model/src/controller/java/zap-generated/chip/devicecontroller/: ChipClusters.java  ChipEventStructs.java  ChipIdLookup.java  ChipStructs.java  ClusterInfoMapping.java  ClusterReadMapping.java  ClusterWriteMapping.java
examples/network-manager-app/network-manager-common/: network-manager-app.matter  network-manager-app.zap
examples/ota-provider-app/ota-provider-common/: ota-provider-app.matter  ota-provider-app.zap
examples/ota-requestor-app/ota-requestor-common/: ota-requestor-app.matter  ota-requestor-app.zap
examples/pump-app/pump-common/: pump-app.matter  pump-app.zap
examples/pump-controller-app/pump-controller-common/: pump-controller-app.matter  pump-controller-app.zap
examples/refrigerator-app/refrigerator-common/: refrigerator-app.matter  refrigerator-app.zap
examples/rvc-app/rvc-common/: rvc-app.matter  rvc-app.zap
examples/smoke-co-alarm-app/smoke-co-alarm-common/: smoke-co-alarm-app.matter  smoke-co-alarm-app.zap
examples/temperature-measurement-app/temperature-measurement-common/: temperature-measurement.matter  temperature-measurement.zap
examples/terms-and-conditions-app/linux/: BUILD.gn  args.gni  main.cpp
examples/terms-and-conditions-app/terms-and-conditions-common/: terms-and-conditions-app.matter  terms-and-conditions-app.zap
examples/thermostat/thermostat-common/: thermostat.matter  thermostat.zap
scripts/tests/: local.py
src/app/: BUILD.gn  FailSafeContext.h  common_flags.gni
src/app/server/: BUILD.gn  DefaultEnhancedSetupFlowProvider.cpp  DefaultEnhancedSetupFlowProvider.h  DefaultTermsAndConditionsProvider.cpp  DefaultTermsAndConditionsProvider.h  EnhancedSetupFlowProvider.h  Server.cpp  Server.h  TermsAndConditionsManager.cpp  TermsAndConditionsManager.h  TermsAndConditionsProvider.h
src/controller/: AutoCommissioner.cpp  BUILD.gn  CHIPDeviceController.cpp  CHIPDeviceController.h  CommissioningDelegate.cpp  CommissioningDelegate.h
src/platform/: device.gni
src/python_testing/: TC_CGEN_2_5.py  TC_CGEN_2_6.py  TC_CGEN_2_7.py  TC_CGEN_2_8.py  matter_testing_support.py
src/system/: SystemConfig.h
(+115 files in other folders)
